--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
+  scroll-behavior: smooth;
+}
+body {
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
