--- a/client/src/pages/css/acct.css
+++ b/client/src/pages/css/acct.css
@@ -10,7 +10,10 @@
     border-radius: 15px;
     grid-template-columns: 10% 40% 30% 20%;
 }
-
+.toggleRef{
+    max-height: 80vh;
+    overflow-y: scroll;
+}
 .userAcctHomePage{
     display:flex;
     flex-wrap: wrap;
@@ -18,7 +21,7 @@
 
 }
 
-.container .toggleBtn{
+.container .toggleBtn, button{
     background-color: teal;
    
     color: aliceblue;
@@ -28,7 +31,7 @@
     cursor: pointer;
     transition: 1s;
 }
-.container  .toggleBtn:hover{
+.container  .toggleBtn:hover, button:hover{
     border-radius: 5px;
     box-shadow: 0px 0px 1px 0px rgb(199, 195, 195);
 }
@@ -58,4 +61,27 @@
     .container{
         max-width: 31%;
     }
+}
+
+
+/*  RequestFundAccount Component */
+.successful {
+    padding: 10px;
+    display: flex;
+    align-items: center;;
+}
+.hide{
+    display: none !important;
+}
+
+input, select{
+    padding: 10px;
+    display: block;
+    border-radius: 5px;
+    border: 1px solid rgb(105, 129, 148);
+    background-color: aliceblue;
+    margin: 10px 0px;
+}
+input:hover, select:hover{
+
 }
