--- a/client/src/pages/css/admin.css
+++ b/client/src/pages/css/admin.css
@@ -1,3 +1,6 @@
+:root{
+    --box-shadow: 0px 0px 10px 0px rgb(193, 187, 187);
+}
 .investment h4, .investment div{
     display: flex;
     align-items: center;
@@ -41,7 +44,7 @@
 }
 .updateInvestment{
     margin: 15px 0px;
-    box-shadow: 0px 0px 10px 0px rgb(193, 187, 187);
+    box-shadow: var(--box-shadow);
     border-radius: 5px;
     padding : 10px;
     transition: 0.8s;
@@ -60,4 +63,42 @@
 
 .investmentActions #delete{
     background-color: red;
+}
+
+.adminTransactionUpdateDiv{
+    padding: 10px;
+    margin: 10px 0px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+}
+
+.adminTransactionUpdateDiv .showBtn, .goldBtn {
+    color: black ;
+    background: gold;
+    font-weight: bolder;
+    max-height: 50px;
+}
+
+.transactionContent > div{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin: 10px 0px;
+}
+.transactionContent > div h4{
+    display: flex;
+    align-items: center;
+}
+.transactionContent section{
+    margin-bottom: 10px;
+}
+
+.statuses {
+    padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.statuses button{
+    padding: 12px;
+    border-radius: 24px;
+    background-color: navy;
 }
