--- a/client/src/pages/css/acct.css
+++ b/client/src/pages/css/acct.css
@@ -1,3 +1,7 @@
+:root{
+    --min-height: 200px;
+    --border: 1px solid rgb(215, 231, 231);
+}
 .container{
     background-color: rgb(239, 237, 237);
 }
@@ -127,7 +131,7 @@ div.userTransaction{
     border-radius: 20px;
     padding: 10px;
     background-color: white;
-    border: 1px solid rgb(215, 231, 231);
+    border: var(--border, 1px solid rgb(215, 231, 231));
 }
 .userTransaction > section{
     margin: 20px 0px;
@@ -157,12 +161,84 @@ div.userTransaction{
 }
 .emptyList{
     background-color: white;
-    min-height: 200px;
+    min-height: var(--min-height, 200px);
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     border-radius: 20px;
     padding: 10px;
+}
+
+.withdrawalCurrencies button{
+    background-color: white;
+    color: black;
+    border: 1px solid rgb(203, 203, 203);
+    border-radius: 5px;
+    display: inline-flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.displayBalances section{
+    margin-top: 10px;
+    background-color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    min-height: var(--min-height, 200px);
+    align-content: center;
+    justify-content: center;
+    border: var(--border, 1px solid rgb(215, 231, 231));
+
+}
+.displayBalances h2, .displayBalances h5{
+    
+    min-width: 100%;
+    text-align: center;
+    padding: 5px;
+}
+.displayBalances main{
+    margin-top: 10px;
+}
+.displayBalances main > p{
+    text-align: center;
+    background-color: white;
+    padding: 10px;
+    color: blue;
+    border: 1px solid blue;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+button.isActive{
+    background-color: rgb(218, 232, 245);
+    border: 1px solid rgb(66, 66, 150);
+}
+
+.withdrawalForm{
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+input[type=checkbox]{
+    display: inline;
+}
+.withdrawalForm button[type=submit]{
+    background-color: blue;
+}
+
+.withdrawalForm .error{
+    color: red;
+    display: flex;
+    align-items: center;
+}
+.withdrawalForm .success{
+    color: teal;
+    display: flex;
+    align-items: center;
 }
 @media screen and (min-width: 700px){
     .container{
