--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -10,6 +10,7 @@ html{
     min-height: 350px;
     padding: 10px;
     background-color: var(--intro-bg);
+    padding-bottom: 20px;
     
 }
 .introTextDiv h1{
@@ -60,11 +61,20 @@ html{
 .introImgDiv img{
     display: block;
     object-fit: cover;
-    max-height: 600px;
+    width: 100%;
+    max-height: 650px; 
 
 }
-
+.statsDiv {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 50px 0px;
+}
+.statsDiv section{
+    padding: 10px 0px;
+}
 @media screen and (min-width: 767px){
+
     .homePageIntroDiv > section{
         display: grid;
         width: 80%;
@@ -73,4 +83,10 @@ html{
         grid-template-columns: 50% 40%;
         align-items: center;
     }
+
+    section.statsDiv{
+        grid-template-columns: repeat(4, 25%);
+    }
+    
 }
+
