--- a/client/src/pages/css/acct.css
+++ b/client/src/pages/css/acct.css
@@ -1,9 +1,10 @@
 :root{
     --min-height: 200px;
     --border: 1px solid rgb(215, 231, 231);
+    --bg-color: rgb(239, 237, 237);
 }
 .container{
-    background-color: rgb(239, 237, 237);
+    background-color: var(--bg-color, rgb(239, 237, 237));
 }
 
 .containerDesc {
