--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -1,9 +1,11 @@
 :root{
     --intro-bg: rgb(255, 249, 241);
     --big-screen: 767px;
+    --investment-bg: rgb(220, 213, 213);
 }
 html{
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 .homePageIntroDiv{
     background-size: contain;
@@ -76,18 +78,22 @@ html{
 
 /* CoinsRate */
 .coinRatesDiv{
-    padding: 20px;
-    
+    /* padding: 10px; */
 }
 
 .coinRatesDiv header{
     color: grey;
     display: grid;
-    grid-template-columns: 44% 33% 33%;
+    grid-template-columns: 50% 27% 22%;
+    justify-content: center;
+    overflow-x: hidden;
+
 }
 .coinRatesDiv section{
     display: grid;
-    grid-template-columns: 44% 33% 33%;;
+    grid-template-columns: 50% 27% 22%;
+    justify-content: center;
+    overflow-x: hidden;
 
 }
 .coinRatesDiv img {
@@ -120,6 +126,74 @@ html{
     cursor: pointer;
     border-radius: 5px;
 }
+
+/* Investments */
+.investmentsHomeDiv{
+    padding: 10px;
+}
+.investmentsHomeDiv{
+    background-color: var(--intro-bg);
+}
+.investmentCardDiv{
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    min-width: 400px;
+}
+.investmentCardDiv:hover{
+    box-shadow: 0px 0px 1px 0px rgb(219, 207, 193);
+    border: 1px solid #FCD535;
+}
+.investmentCardDiv .headerSection{
+    padding: 10px 0px;
+    border-bottom: 1px solid aliceblue;
+}
+.investmentDetails{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    padding: 10px 0px;
+
+}
+.investmentDetails h5{
+    display: flex;
+    align-items: center;
+}
+.investmentSectionBtn {
+    padding: 10px 0px;
+}
+.investmentsHomeDiv{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.investmentSectionBtn button{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    min-height: 24px;
+    color: #181A20;
+    background-color: #FCD535;
+    width: 100%;
+}
+.investmentSectionBtn button a{
+    color: #181A20;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder ;
+}
+.waitPeriod h5{
+    display: flex;
+    /* justify-content: space-evenly; */
+    align-items: center;
+}
+.investmentCardDiv .waitPeriod {
+    margin: auto;
+}
 @media screen and (min-width: 767px){
 
     .homePageIntroDiv > section{
@@ -134,12 +208,20 @@ html{
     section.statsDiv{
         grid-template-columns: repeat(4, 25%);
     }
+
+    /* Coin Exchange */
+    .coinRatesDiv{
+        padding: 10px;
+    }
     .coinRatesDiv h2{
         text-align: center;
     }
     .coinRates{
         max-width: 70%;
         margin: auto;
+    }
+    .investmentCardDiv {
+        max-width: 700px;
     }
 }
 
