--- a/client/src/pages/css/admin.css
+++ b/client/src/pages/css/admin.css
@@ -167,6 +167,7 @@
 .howToEarnDiv{
     background-color: white;
     padding : 10px;
+    margin-top: 10px;
 }
 .howToEarnDiv textarea{
     min-width: 70%;
