--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -3,9 +3,16 @@
     --big-screen: 767px;
     --investment-bg: rgb(220, 213, 213);
 }
-html{
+*{
     box-sizing: border-box;
+}
+body{
+    width: 100vw;
+    margin: auto;
+    /* min-width: 100vw;
+    max-width: 100vw; */
     overflow-x: hidden;
+
 }
 .homePageIntroDiv{
     background-size: contain;
@@ -40,7 +47,7 @@ html{
     justify-content: space-between;
 
 }
-.authBtns .authBtnSignUp{
+.authBtns .authBtnSignUp, .reviewSubmitButton{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,7 +58,7 @@ html{
     font-weight: bolder ;
 
 }
-.authBtns button {
+.authBtns button, .reviewSubmitButton {
     color: #181A20;
 }
 .authBtns a{
@@ -140,11 +147,11 @@ html{
     /* background-color: var(--intro-bg); */
 }
 .investmentCardDiv{
-    margin: 20px;
-    padding: 10px;
+    margin: 8px;
+    padding: 5px;
     border-radius: 10px;
     background-color: white;
-    min-width: 400px;
+    min-width: 99%;
     box-shadow: 0px 0px 1px 0px #FCD535;
 }
 .investmentCardDiv:hover{
@@ -218,7 +225,7 @@ html{
 .howToEarnImage img{
     display: block;
     object-fit: cover;
-    max-height: 800px;
+    max-height: 700px;
     margin: auto;
 }
 .howToEarnMain{
@@ -234,10 +241,68 @@ html{
 }
 .howToEarnMain h2{
     display: flex;
-
     align-items: center;
     flex-wrap: wrap;
 }
+/* Hack for .investmentCardDiv  */
+@media screen and (min-width: 410px){
+    .investmentCardDiv{
+        min-width: 400px;
+    }
+}
+
+/** Review*/
+.homeReviewDiv{
+    background-color: var(--intro-bg);
+    padding: 20px;
+} 
+.reviewListDiv{
+    display: flex;
+    padding: 10px;
+    overflow-x: scroll;
+}
+.reviewCard{
+    max-width: 300px;
+    min-width: 250px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    margin-right: 10px; 
+    box-shadow: 0px 0px 1px 0px gold;
+    transition: 0.5s linear;
+}
+.reviewCard:hover{
+    box-shadow: 0px 0px 1px 0px yellow;
+}
+
+.reviewCard .summaryDiv{
+    display: flex;
+    justify-content: center;
+    padding: 10px 0px;
+}
+.summaryDiv .reviewImgSection{
+    min-width: 81px;
+    min-height: 81px;
+
+}
+.summaryDiv .reviewImgSection img{
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.reviewImgSectionText{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+
+}
+.reviewImgSectionText span{
+    display: block;
+    min-width:51%;
+}
+
+
 @media screen and (min-width: 767px){
 
     .homePageIntroDiv > section{
@@ -266,6 +331,7 @@ html{
     }
     .investmentCardDiv {
         max-width: 700px;
+        min-width: 400px;
     }
 
     /* How to earn*/
