Completed forgot password setup

--- a/client/src/pages/css/admin.css
+++ b/client/src/pages/css/admin.css
@@ -188,3 +188,9 @@
 .reviewImgAside {
     padding: 10px;
 }
+
+/** Footer */
+.footerDetailsForm{
+    padding: 10px;
+    background-color: white;
+}
