--- a/client/src/pages/css/acct.css
+++ b/client/src/pages/css/acct.css
@@ -1,3 +1,4 @@
+@import "../../components/css/footer.css";
 :root{
     --min-height: 200px;
     --border: 1px solid rgb(215, 231, 231);
@@ -28,6 +29,9 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+
+    height:auto !important;
+    min-height:100%;
 
 }
 
@@ -247,12 +251,17 @@ section.statusBtns .clickedInvestmentStatusBtn{
     box-shadow: 0px 0px 2px 0px black;
 
 }
-@media screen and (min-width: 700px){
+@media screen and (min-width: 767px){
     .container{
         max-width: 48%;
     }
     .investmentOptions > div{
         min-width: 48%;
+    }
+
+    .userAcctHomePage{
+        align-content: flex-start;
+        min-height: calc(100vh - var( --bg-screen-footer-min-height));
     }
 }
 
