--- a/client/src/pages/css/general.css
+++ b/client/src/pages/css/general.css
@@ -1,3 +1,11 @@
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+    overflow-x: hidden;
+}
 .loading {
     display: flex;
     justify-content: center;
