--- a/client/src/pages/css/auth.css
+++ b/client/src/pages/css/auth.css
@@ -5,7 +5,7 @@
 }
 .auth{
     min-height: 70vh;
-    max-width: 100vw;
+    max-width: 99vw;
     background-color: rgb(228, 228, 228);
     display: flex;
     align-items: center;
@@ -45,6 +45,7 @@
 }
 .form .inputErr{
     color: red;
+    
 }
 
 .formErr, .formSuccess{
@@ -54,7 +55,8 @@
     list-style-type : none;
     margin : 10px 0px 10px 0px;
     border-radius: 5px;
-    
+    max-width: 95%;
+    text-align: center;
 }
 
 
@@ -73,6 +75,9 @@
     padding: 15px;
     background-color: var(--form-outline-btn-color);
     width: 100%;
+}
+.authBtn:disabled{
+    background-color: #f6f6f6;
 }
 
 @media screen and (min-width: 410px) {
